--- a/operation-manual/operate-a-prover-node/index.html
+++ b/operation-manual/operate-a-prover-node/index.html
@@ -3,17 +3,17 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Operate a Prover Node</title>
+        <title>Operate a Prover Node - Brevis ProveNet</title>
 
 
         <!-- Custom HTML head -->
-
+        <link rel="icon" href="favicon-dark.png" media="(prefers-color-scheme: light)">
+        <link rel="icon" href="favicon-light.png" media="(prefers-color-scheme: dark)">
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#ffffff">
 
-        <link rel="icon" href="../../favicon-de23e50b.svg">
-        <link rel="shortcut icon" href="../../favicon-8114d1fc.png">
+        <link rel="shortcut icon" href="../../favicon-f2934afb.png">
         <link rel="stylesheet" href="../../css/variables-8adf115d.css">
         <link rel="stylesheet" href="../../css/general-2459343d.css">
         <link rel="stylesheet" href="../../css/chrome-cc69e1fb.css">
@@ -28,6 +28,7 @@
         <link rel="stylesheet" id="mdbook-ayu-highlight-css" href="../../ayu-highlight-56612340.css">
 
         <!-- Custom theme stylesheets -->
+        <link rel="stylesheet" href="../../theme/custom-fc75f45e.css">
 
 
         <!-- Provide site root and default themes to javascript -->
@@ -137,7 +138,7 @@
                         </button>
                     </div>
 
-                    <h1 class="menu-title"></h1>
+                    <h1 class="menu-title">Brevis ProveNet</h1>
 
                     <div class="right-buttons">
                         <a href="../../print.html" title="Print this book" aria-label="Print this book">
